<resources>
    <string name="app_name">Hamza Damra</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="welcome_to_nour_chat_application">Wolcome to \nOur Chat Application</string>
    <string name="todo">TODO</string>
    <string name="the_number_one_application_in_the_world_in_terms_of_safety">The number one application in the world in terms of safety</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="loading">Loading...</string>
    <string name="loading1">Loading...</string>
    <string name="successful">Successful</string>
    <string name="insert_user_details">Insert User Details</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_your_mail">Enter your mail</string>
    <string name="view_data">View Data</string>
    <string name="insert_data">Insert Data</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="age">Age</string>
    <string name="age1">Age:</string>
</resources>