<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/top_background"
                    android:contentDescription="@string/todo" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    app:layout_constraintVertical_bias="0.505"
                    app:srcCompat="@drawable/logo1"
                    android:contentDescription="@string/todo" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_nour_chat_application"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_marginTop="16dp"
                android:textColor="#0757f6"
                android:textAlignment="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#0757f6"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginTop="16dp"
                android:text="@string/the_number_one_application_in_the_world_in_terms_of_safety"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/button_background2"
                android:text="@string/login"
                android:inputType="text"
                android:textSize="22sp"
                style="@style/Widget.AppCompat.Button"
                android:textColor="#FFFFFF"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/button_background"
                android:text="@string/signup"
                android:inputType="text"
                android:textSize="22sp"
                style="@style/Widget.AppCompat.Button"
                android:textColor="#FFFFFF"
                />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>