<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/top_background"
                    android:contentDescription="@string/todo" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    app:layout_constraintVertical_bias="0.501"
                    app:srcCompat="@drawable/logo1" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_to_your_account"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:textColor="#0757f6"
                android:textAlignment="center"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/facebook"
                    android:contentDescription="@string/todo" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/google"
                    android:contentDescription="@string/todo" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/twitter"
                    android:contentDescription="@string/todo" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextTextEmail"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/enter_your_email"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColorHint="#636363"
                android:textSize="16sp"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:ems="10"
                android:inputType="textPassword"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:hint="@string/enter_your_password"
                android:padding="16dp"
                android:textColorHint="#636363"
                android:textSize="16sp"
                android:background="@drawable/edit_text_background"
                android:autofillHints="" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@drawable/button_background"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="24dp"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="Login" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:textColor="#5b5b5b"
                android:text="Forget Your Password" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>