<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitXY"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/top_background" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/todo"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView"
                        app:layout_constraintVertical_bias="0.505"
                        app:srcCompat="@drawable/logo3" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="SignUp to your account"
                    android:textAlignment="center"
                    android:textColor="#0757f6"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextTextName"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:hint="Enter your name"
                    android:inputType="textPersonName"
                    android:padding="16dp"
                    android:textColorHint="#636363"
                    android:textSize="16sp"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/editTextTextEmailEnter"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:textColorHint="#636363"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editTextTextPasswordEnter"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_background"
                    android:ems="10"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textColorHint="#636363"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="62dp"
                    android:background="@drawable/button_background"
                    android:inputType="text"
                    android:text="SignUp"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />


            </LinearLayout>
        </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>